<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">URL Vinegar</string>
    <string name="app_description">Clean and meaningful URL cleaner and shortener</string>
    
    <!-- Actions -->
    <string name="share">Share</string>
    <string name="copy">Copy</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="settings">Settings</string>
    <string name="preview">Preview:</string>
    
    <!-- Processing Dialog -->
    <string name="transforms">Transforms</string>
    <string name="query_parameters">Query Parameters</string>
    <string name="add_transform">Add Transform</string>
    <string name="share_via">Share via</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="remove_param_transform">Remove %1$s (%2$s)</string>
    
    <!-- Transform Dialog -->
    <string name="transform_name">Name</string>
    <string name="regex_pattern">Regex Pattern</string>
    <string name="replacement_optional">Replacement (optional)</string>
    <string name="name_and_pattern_required">Name and pattern are required</string>
    <string name="invalid_regex">Invalid regex pattern</string>
    <string name="save_transform">Save Transform?</string>
    <string name="save_transform_message">Do you want to save this transform to your configuration?</string>
    <string name="this_time_only">This time only</string>
    <string name="no_match">No match on current URL</string>
    
    <!-- Disable Transform Dialog -->
    <string name="disable_transform">Disable Transform</string>
    <string name="this_url_only">This URL only</string>
    <string name="disable_in_config">Disable in config</string>
    <string name="delete_from_config">Delete from config</string>
    
    <!-- Parameter Dialog -->
    <string name="keep_parameter">Keep Parameter</string>
    <string name="remove_parameter">Remove Parameter</string>
    <string name="add_to_whitelist">Add to whitelist</string>
    <string name="remove_from_whitelist">Remove from whitelist</string>
    <string name="add_param_message">Add \"%1$s\" to allowed parameters?</string>
    <string name="description_optional">Description (optional)</string>
    
    <!-- Config Activity -->
    <string name="allowed_parameters">Allowed Parameters</string>
    <string name="add_parameter">Add Parameter</string>
    <string name="edit_transform">Edit Transform</string>
    <string name="delete_transform">Delete Transform?</string>
    <string name="delete_transform_confirm">Are you sure you want to delete this transform?</string>
    <string name="edit_parameter">Edit Parameter</string>
    <string name="delete_parameter">Delete Parameter?</string>
    <string name="delete_param_confirm">Are you sure you want to delete this parameter?</string>
    <string name="parameter_name">Parameter Name</string>
    <string name="name_required">Name is required</string>
    
    <!-- Accessibility -->
    <string name="drag_to_reorder">Drag to reorder</string>
</resources>
